--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bwamern",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "v10.19.0",
+    "npm" : "6.14.4"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/lab": "^4.0.0-alpha.53",
